--- a/contact us .html
+++ b/contact us .html
@@ -4,6 +4,11 @@
 		<title>تماس با ما </title>
 		<meta charset = "utf-8">
 		<style>
+			form
+			{
+				border: double;
+				padding: 25px;
+			}
 			:lang(fa)
 			{
 				direction: rtl;
