--- a/Login/login.html
+++ b/Login/login.html
@@ -12,7 +12,7 @@
 	
 		<h1>ورود</h1>
 		<form action = "login.php" method = "post">
-		<label for = "name">نام :</label>
+		<label for = "name">نام کاربری : </label>
 		<br>
 		<input type = "text" id="name" name = "name">
 		<br>
@@ -22,14 +22,14 @@
 		<br>
 		
 		
-		<button type = "submit" class = "btn btn-contained primary">
+		<button type = "submit" class = "btn btn-filled">
 				<span>
 				ورود
 				</span>
 				
-			</button>
+		</button>
 			
-			<button type = "submit" class = "btn btn-contained secondary">
+			<button type = "submit" class = "btn btn-outline">
 				<span>
 				رمز عبور خود را فراموش کردم 
 				</span>
