--- a/Login/login.html
+++ b/Login/login.html
@@ -35,7 +35,12 @@
 				</span>
 				
 			</button>
-			
+<br>
+		<a href = "../register/register.html" class = "btn btn-text">
+		<span>
+		ثبت نام
+		</span>
+		</a>
 			
 		</form> 
 	</body>
