--- a/register/register.html
+++ b/register/register.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang= "fa">
 	<head>
-		<title>register</title>
+		<title>editProfile</title>
 		<meta charset = "utf-8">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 		<script src="https://kit.fontawesome.com/e36ff0bc6c.js" crossorigin="anonymous"></script>
@@ -9,14 +9,14 @@
 		<link rel = "stylesheet" href = "style.css">
 	</head>
 	<body>
-
+	
+		
 		<form action = "register.php" method = "post">
-		<label >ثبت نام کاربر جدید</label>
-		<input type = "text" id="name" name = "name" placeholder = "نام کاربری ">
+			<h2>ثبت نام کاربر جدید</h2>
+		<input type = "text" id="name" name = "name" placeholder ="نام کاربری">
 		<br>
-		<input type = "password" id="pass" name = "pass" placeholder = "رمز عبور ">
+		<input type = "password" id="pass" name = "pass" placeholder ="رمز عبور">	
 		<br>
-
 		<input type = "email" id = "email" name = "email" placeholder = "ایمیل">
 		<br>
 		<button type = "submit" class = "btn btn-filled">
@@ -25,13 +25,6 @@
 				</span>
 				
 			</button>
-			
-				
-			
-		</form>
-		
-		 
+		</form> 
 	</body>
-
- 
 </html>
